# go2rust

./: Comparison_Report.md  Migration_Methodology.md  README.md
_testing/: go_err.json  go_get.json  go_openapi.yaml  go_post.json  rust_get.json  rust_openapi.json  rust_post.json
goau/: AGENTS.md  README.md  go.mod  main.go
goau/data/: 28404721-3eca-4fa6-8818-9226f21b8efd.json  4653ec0f-8301-4b22-b996-60ecd3f8c571.json
goau/internal/api/: records.go
rustau/: AGENTS.md  Cargo.toml  README.md
rustau/src/: main.rs
